--- a/packages/nx-nest/tsconfig.json
+++ b/packages/nx-nest/tsconfig.json
@@ -5,7 +5,9 @@
     "rootDir": "src",
     "baseUrl": "src",
     "paths": {
-      "@src/*": ["*"]
+      "@src/*": ["*"],
+      "@application/*": ["schematics/application/*"],
+      "@init/*": ["schematics/init/*"]
     }
   },
   "include": ["src"],
