--- a/packages/nx-nest/tsconfig.json
+++ b/packages/nx-nest/tsconfig.json
@@ -7,7 +7,8 @@
     "paths": {
       "@src/*": ["*"],
       "@application/*": ["schematics/application/*"],
-      "@init/*": ["schematics/init/*"]
+      "@init/*": ["schematics/init/*"],
+      "@utils/*": ["utils/*"]
     }
   },
   "include": ["src"],
