--- a/packages/nx-nest/tsconfig.build.json
+++ b/packages/nx-nest/tsconfig.build.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "rootDir": "src",
     "baseUrl": "src",
-    "noUnusedLocals": true
+    "noUnusedLocals": true,
+    "incremental": false
   }
 }
