--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -40,6 +40,7 @@
     "@angular-devkit/architect": "^0.901.9",
     "@angular-devkit/core": "^9.0.0",
     "@angular-devkit/schematics": "~9.1.0",
+    "@nrwl/cli": "^9.5.0",
     "eslint": "^7.3.1"
   },
   "devDependencies": {
