--- a/packages/nx-tsc/package.json
+++ b/packages/nx-tsc/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "schematics": "./collection.json",
   "builders": "./builders.json",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "prebuild": "rimraf tsconfig*.tsbuildinfo && rimraf dist/",
     "build": "tsc -p tsconfig.build.json && tscpaths -p tsconfig.paths.json -s ./dist -o ./dist",
@@ -39,11 +41,11 @@
     "@angular-devkit/architect": "^0.901.9",
     "@angular-devkit/core": "^9.0.0",
     "@angular-devkit/schematics": "~9.1.0",
-    "eslint": "^7.3.1"
+    "@nrwl/cli": "^9.5.0"
   },
   "devDependencies": {
+    "eslint": "^7.3.1",
     "cpy-cli": "^3.1.1",
-    "@nrwl/cli": "^9.4.5",
     "lint-staged": "^10.2.11",
     "rimraf": "^3.0.2",
     "tsc-watch": "^4.2.8",
