--- a/package.json
+++ b/package.json
@@ -23,17 +23,17 @@
     }
   },
   "dependencies": {
-    "@nrwl/workspace": "*"
+    "@nrwl/workspace": "9.5.1"
   },
   "devDependencies": {
     "@cenk1cenk2/eslint-config": "*",
     "commitizen": "^4.0.5",
     "cz-conventional-changelog": "^3.1.0",
-    "eslint": "^7.1.0",
+    "eslint": "^7.4.0",
     "husky": "^4.2.5",
     "lerna": "^3.20.2",
     "prettier": "^2.0.5",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.6"
   },
   "config": {
     "commitizen": {
