--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -44,9 +44,13 @@
     "@types/eslint": "^7.2.0",
     "@types/prettier": "^2.0.1",
     "eslint": "^7.3.1",
+    "execa": "^4.0.2",
+    "listr2": "^2.2.0",
+    "nunjucks": "^3.2.1",
     "prettier": "^2.0.5"
   },
   "devDependencies": {
+    "@types/nunjucks": "^3.1.3",
     "lint-staged": "^10.2.11",
     "rimraf": "^3.0.2",
     "tsc-watch": "^4.2.8",
