fix(nx-nest): trying to add add/remove funcitonallity for the components, general refactoring

--- a/packages/nx-nest/tsconfig.build.json
+++ b/packages/nx-nest/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"],
+  "exclude": ["node_modules", "dist", "test", "**/*spec.ts", "**/files"],
   "compilerOptions": {
     "rootDir": "src",
     "baseUrl": "src",
