--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -37,13 +37,14 @@
     "@nrwl/workspace": "*"
   },
   "dependencies": {
-    "@angular-devkit/architect": "^0.901.9",
-    "@angular-devkit/core": "^9.0.0",
-    "@angular-devkit/schematics": "~9.1.0",
-    "@nrwl/cli": "^9.5.0",
+    "@angular-devkit/architect": "^0.1000.3",
+    "@angular-devkit/core": "^10.0.3",
+    "@angular-devkit/schematics": "~10.0.3",
+    "@nrwl/cli": "^10.0.2",
     "@types/eslint": "^7.2.0",
     "@types/prettier": "^2.0.1",
-    "eslint": "^7.3.1",
+    "deepmerge": "^4.2.2",
+    "eslint": "^7.5.0",
     "execa": "^4.0.2",
     "figures": "^3.2.0",
     "listr2": "^2.2.0",
@@ -51,6 +52,7 @@
     "prettier": "^2.0.5"
   },
   "devDependencies": {
+    "@cenk1cenk2/eslint-config": "*",
     "@types/figures": "^3.0.1",
     "@types/nunjucks": "^3.1.3",
     "lint-staged": "^10.2.11",
