--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "root",
   "private": true,
-  "repository": "<<---REPOSITORYHERE--->>",
+  "repository": "https://gitlab.tailored-apps.com/ckilic/nx-test",
   "description": "Tailored NestJS NX Based Application Skeleton",
   "author": "Backend <backend@webundsoehne.com>",
   "license": "ISC",
