--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webundsoehne/eslint-config",
-  "version": "1.0.0-development",
+  "version": "1.0.0",
   "description": "Eslint configuration for my taste.",
   "main": "index.js",
   "repository": "https://gitlab.tailored-apps.com/ckilic/nx-test",
