--- a/packages/nestjs-util/package.json
+++ b/packages/nestjs-util/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webundsoehne/nestjs-util",
-  "version": "1.0.0-development",
+  "version": "1.0.0",
   "description": "NestJS skeleton util library",
   "author": "Backend <backend@webundsoehne.com>",
   "license": "ISC",
