--- a/packages/nestjs-util/tsconfig.build.json
+++ b/packages/nestjs-util/tsconfig.build.json
@@ -1,9 +1,9 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": [
-    "node_modules",
-    "test",
-    "dist",
-    "**/*spec.ts"
-  ]
+  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"],
+  "compilerOptions": {
+    "rootDir": "src",
+    "baseUrl": "src",
+    "noUnusedLocals": true
+  }
 }
