--- a/packages/nx-builders/package.json
+++ b/packages/nx-builders/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webundsoehne/nx-builders",
-  "version": "1.0.0-development",
+  "version": "1.0.0",
   "description": "TSC compiler for NX.",
   "repository": "https://gitlab.tailored-apps.com/ckilic/nx-test",
   "author": "Backend <backend@webundsoehne.com>",
