--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webundsoehne/nx-tools",
-  "version": "1.0.0-development",
+  "version": "1.0.0",
   "description": "Common tools for NX.",
   "repository": "https://gitlab.tailored-apps.com/ckilic/nx-test",
   "main": "dist/index.js",
@@ -52,6 +52,7 @@
     "@types/eslint": "^7.2.0",
     "@types/prettier": "^2.0.1",
     "deepmerge": "^4.2.2",
+    "diff": "^4.0.2",
     "eslint": "^7.5.0",
     "execa": "^4.0.2",
     "figures": "^3.2.0",
@@ -60,6 +61,7 @@
     "prettier": "^2.0.5"
   },
   "devDependencies": {
+    "@types/diff": "^4.0.2",
     "@types/figures": "^3.0.1",
     "@types/nunjucks": "^3.1.3",
     "lint-staged": "^10.2.11",
