--- a/packages/nx-tools/tsconfig.json
+++ b/packages/nx-tools/tsconfig.json
@@ -6,8 +6,10 @@
     "baseUrl": "src",
     "paths": {
       "@src/*": ["*"],
-      "@application/*": ["schematics/application/*"],
-      "@init/*": ["schematics/init/*"]
+      "@integration/*": ["integration/*"],
+      "@init/*": ["init/*"],
+      "@rules/*": ["rules/*"],
+      "@utils/*": ["utils/*"]
     }
   },
   "include": ["src"],
