--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   monorepo:
-    image: cenk1cenk2/lerna-dev
+    image: cenk1cenk2/lerna-dev:latest
     environment:
       # - COMMAND_INIT_ENV=init-env
       # - PACKAGE_START_COMMAND=start
