--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@nrwl/workspace": "10.0.6"
   },
   "devDependencies": {
+    "@cenk1cenk2/cz-cc": "^1.0.4",
     "commitizen": "^4.0.5",
-    "cz-conventional-changelog": "^3.1.0",
     "eslint": "^7.5.0",
     "husky": "^4.2.5",
     "lerna": "^3.20.2",
@@ -37,7 +37,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/@cenk1cenk2/cz-cc"
     }
   }
 }
