--- a/packages/brownie/package.json
+++ b/packages/brownie/package.json
@@ -70,51 +70,35 @@
     "cenk1cenk2"
   ],
   "dependencies": {
-    "@cenk1cenk2/boilerplate-oclif": "^1.1.0",
-    "@oclif/command": "^1.6.1",
-    "@oclif/config": "^1.15.1",
-    "@oclif/errors": "^1.2.2",
+    "@cenk1cenk2/boilerplate-oclif": "^1.1.10",
+    "@oclif/command": "^1.7.0",
+    "@oclif/config": "^1.16.0",
+    "@oclif/errors": "^1.3.3",
     "@tiagonapoli/oclif-plugin-spaced-commands": "^0.0.6",
-    "config": "^3.3.1",
-    "deepmerge": "^4.2.2",
     "enquirer": "^2.3.5",
     "execa": "^4.0.2",
     "fs-extra": "^9.0.0",
     "globby": "^11.0.0",
-    "lerna": "^3.22.1",
-    "listr2": "^2.3.3",
-    "object-path": "^0.11.4",
-    "object-path-immutable": "^4.1.0",
-    "pad": "^3.2.0",
-    "table": "^5.4.6",
+    "listr2": "^2.4.0",
+    "nunjucks": "^3.2.2",
     "tslib": "^2.0.0",
     "types": "^0.1.1",
-    "winston": "^3.2.1",
     "yaml": "^1.10.0"
   },
   "devDependencies": {
     "@oclif/dev-cli": "^1.22.2",
-    "@types/config": "^0.0.36",
     "@types/fs-extra": "^9.0.1",
     "@types/jest": "^26.0.7",
-    "@types/node": "^14.0.25",
-    "@types/object-path": "^0.11.0",
-    "cz-conventional-changelog": "3.2.0",
+    "@types/node": "^14.0.26",
     "eslint": "^7.1.0",
     "husky": "^4.2.5",
     "jest": "^26.0.1",
     "lint-staged": "^10.2.7",
     "prettier": "^2.0.5",
-    "ts-jest": "^26.1.0",
-    "ts-node": "^8.10.2",
+    "ts-jest": "^26.1.4",
     "tsc-watch": "^4.2.8",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "^0.0.9",
     "typescript": "^3.9.3"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
   }
 }
