feat(brownie): mostly implemented the docker container add function
still due to fix the template for env and volumes because they are not
really working a hundered percent

--- a/packages/brownie/config/containers/mongodb/volumes.yml
+++ b/packages/brownie/config/containers/mongodb/volumes.yml
@@ -1,3 +1,8 @@
 - from: mongo-initialize.sh
   to: /docker-entrypoint-initdb.d/mongo-initialize-multiple.sh
   options: ro
+  mode: file
+
+- from: test/
+  to: /test
+  mode: volume
