--- a/packages/brownie/config/containers/mongodb/env.yml
+++ b/packages/brownie/config/containers/mongodb/env.yml
@@ -2,4 +2,4 @@ MONGO_INITDB_ROOT_USERNAME: root
 MONGO_INITDB_ROOT_PASSWORD: secret
 MONGO_NON_ROOT_USERNAME: user
 MONGO_NON_ROOT_PASSWORD: secret
-MONGO_INITDB_MULTIPLE: auth mock-auth
+MONGO_INITDB_MULTIPLE:
