--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,8 @@
-version: '3.7'
+version: "3.7"
 services:
   monorepo:
     image: cenk1cenk2/lerna-dev:latest
     environment:
-      # - COMMAND_INIT_ENV=init-env
-      # - PACKAGE_START_COMMAND=start
-      # format => packages/service1:packages/service2
-      # format => packages/service1,off,override="start":packages/service2,override='dev'
       - SERVICES=packages/brownie:packages/nestjs-util:packages/nx-tools:packages/nx-builders:packages/nx-nest
       - RUN_IN_BAND=packages/nx-tools:packages/nx-builders
       - RUN_IN_BAND_WAIT=15
