--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -58,7 +58,10 @@
     "figures": "^3.2.0",
     "listr2": "^2.4.1",
     "nunjucks": "^3.2.1",
-    "prettier": "^2.0.5"
+    "pidtree": "^0.5.0",
+    "prettier": "^2.0.5",
+    "through": "^2.3.8",
+    "tree-kill": "^1.2.2"
   },
   "devDependencies": {
     "@types/diff": "^4.0.2",
