--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -60,8 +60,7 @@
     "nunjucks": "^3.2.1",
     "pidtree": "^0.5.0",
     "prettier": "^2.0.5",
-    "through": "^2.3.8",
-    "tree-kill": "^1.2.2"
+    "through": "^2.3.8"
   },
   "devDependencies": {
     "@types/diff": "^4.0.2",
