--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "link-packages": "lerna link --force-local"
   },
   "workspaces": {
-    "packages": ["packages/*"],
+    "packages": [
+      "packages/*"
+    ],
     "nohoist": []
   },
   "husky": {
@@ -25,7 +27,7 @@
     }
   },
   "dependencies": {
-    "@nrwl/workspace": "10.0.7"
+    "@nrwl/workspace": "10.0.8"
   },
   "devDependencies": {
     "@cenk1cenk2/cz-cc": "^1.0.5",
