--- a/packages/nx-builders/package.json
+++ b/packages/nx-builders/package.json
@@ -43,17 +43,20 @@
     }
   },
   "peerDependencies": {
-    "@nrwl/workspace": "*"
+    "@nrwl/workspace": "*",
+    "ts-node": ">= 8.10.0",
+    "ts-node-dev": ">= 1.0.0",
+    "tsc-watch": ">= 4.2.0",
+    "tscpaths": ">= 0.0.9",
+    "typescript": ">= 3.9.0"
   },
   "dependencies": {
     "@angular-devkit/architect": "^0.1000.5",
     "@angular-devkit/core": "^10.0.5",
     "@angular-devkit/schematics": "~10.0.5",
-    "@nrwl/cli": "^10.0.7",
+    "@nrwl/cli": "^10.0.8",
     "execa": "^4.0.2",
-    "tree-kill": "^1.2.2",
-    "tsc-watch": "^4.2.9",
-    "typescript": "^3.9.7"
+    "tree-kill": "^1.2.2"
   },
   "devDependencies": {
     "@types/execa": "^2.0.0",
@@ -62,6 +65,8 @@
     "eslint": "^7.3.1",
     "lint-staged": "^10.2.11",
     "rimraf": "^3.0.2",
-    "tscpaths": "^0.0.9"
+    "tsc-watch": "^4.2.9",
+    "tscpaths": "^0.0.9",
+    "typescript": "^3.9.7"
   }
 }
