--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -34,7 +34,9 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^3.8.0",
     "@typescript-eslint/parser": "^3.8.0",
-    "eslint-plugin-import": "^2.20.1"
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-config-react": "^1.1.7",
+    "eslint-plugin-react-hooks": "^4.0.8"
   },
   "devDependencies": {
     "cz-conventional-changelog": "3.2.0",
