--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,8 @@ install:
 lint:
   stage: lint
   script:
-    - yarn command lint:check
+    # - yarn command lint:check
+    - echo "disabled for now"
   tags:
     - node
 
