--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,9 @@ image: node:14-alpine
 
 workflow:
   rules:
-    - if: $CI_COMMIT_REF_NAME =~ /master$/
+    - if: $CI_COMMIT_REF_NAME =~ /^master$/
       when: always
-    - if: $CI_COMMIT_REF_NAME =~ /develop$/
+    - if: $CI_COMMIT_REF_NAME =~ /^develop$/
       when: always
 
 stages:
@@ -17,8 +17,7 @@ variables:
 
 cache:
   paths:
-    - node_modules/
-    - packages/**/node_modules/
+    - /^**\/node_modules\/$/
 
 install:
   stage: install
@@ -26,8 +25,7 @@ install:
     - yarn --frozen-lockfile
   artifacts:
     paths:
-      - node_modules/
-      - packages/**/node_modules/
+      - /^**\/node_modules\/$/
     expire_in: 30 minutes
   tags:
     - node
@@ -44,10 +42,10 @@ build:
   stage: build
   script:
     # build the dependent packages first
-    - for i in (@webundsoehne/nx-tools @webundsoehne/nx-builders); do PACKAGE="$i" yarn command -- build; done
+    - /bin/ash -c 'for i in (@webundsoehne/nx-tools @webundsoehne/nx-builders); do PACKAGE="$i" yarn command -- build; done'
   artifacts:
     paths:
-      - packages/**/dist/
+      - /^**\/packages\/dist\/$/
     expire_in: 30 minutes
   only:
     - develop
