--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,8 @@ variables:
 
 cache:
   paths:
-    - /^**\/node_modules\/$/
+    - node_modules/
+    - packages/*/node_modules
 
 install:
   stage: install
@@ -25,7 +26,8 @@ install:
     - yarn --frozen-lockfile
   artifacts:
     paths:
-      - /^**\/node_modules\/$/
+      - node_modules/
+      - packages/*/node_modules
     expire_in: 30 minutes
   tags:
     - node
@@ -42,10 +44,10 @@ build:
   stage: build
   script:
     # build the dependent packages first
-    - /bin/ash -c 'for i in (@webundsoehne/nx-tools @webundsoehne/nx-builders); do PACKAGE="$i" yarn command -- build; done'
+    - /bin/ash -c 'PACKAGES=(@webundsoehne/nx-tools @webundsoehne/nx-builders) for i in "${PACKAGES[@]}"; do PACKAGE="$i" yarn command -- build; done'
   artifacts:
     paths:
-      - /^**\/packages\/dist\/$/
+      - packages/*/dist
     expire_in: 30 minutes
   only:
     - develop
