--- a/packages/nx-tools/package.json
+++ b/packages/nx-tools/package.json
@@ -14,10 +14,10 @@
   "builders": "./builders.json",
   "scripts": {
     "prebuild": "rimraf tsconfig*.tsbuildinfo && rimraf dist/",
-    "build": "tsc -p tsconfig.build.json && tscpaths -p tsconfig.paths.json -s ./dist -o ./dist",
-    "dev:build": "yarn prebuild && tsc -p tsconfig.json && tscpaths -p tsconfig.paths.json -s ./dist -o ./dist",
-    "dev:start": "yarn dev:build && TS_NODE_PROJECT='tsconfig.paths.json' tsc-watch --noClear --onSuccess \"yarn dev:start:onSuccess\"",
-    "dev:start:onSuccess": "tscpaths -p tsconfig.paths.json -s ./dist -o ./dist",
+    "build": "tsc -p tsconfig.build.json",
+    "postbuild": "tscpaths -p tsconfig.paths.json -s ./dist -o ./dist",
+    "dev:build": "yarn prebuild && tsc -p tsconfig.json && yarn postbuild",
+    "dev:start": "yarn dev:build && TS_NODE_PROJECT='tsconfig.paths.json' tsc-watch --noClear --onSuccess \"yarn postbuild\"",
     "lint": "prettier --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/"
   },
@@ -48,13 +48,13 @@
     "@angular-devkit/architect": "^0.1000.5",
     "@angular-devkit/core": "^10.0.5",
     "@angular-devkit/schematics": "~10.0.5",
-    "@nrwl/cli": "^10.0.8",
+    "@nrwl/cli": "^10.0.11",
     "deepmerge": "^4.2.2",
     "diff": "^4.0.2",
     "eslint": "^7.6.0",
     "execa": "^4.0.2",
     "figures": "^3.2.0",
-    "listr2": "^2.4.1",
+    "listr2": "^2.5.1",
     "nunjucks": "^3.2.1",
     "pidtree": "^0.5.0",
     "prettier": "^2.0.5",
