--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ stages:
   - install
   - lint
   - build
+  - publish
 
 variables:
   PARENT_PIPELINE_ID: $CI_PIPELINE_ID
@@ -43,13 +44,27 @@ lint:
 build:
   stage: build
   script:
-    - apk add --no-cache --no-progress bash
-    # build the dependent packages first
-    - /bin/bash -c 'PACKAGES=("@webundsoehne/nx-tools" "@webundsoehne/nx-builders") for i in "${PACKAGES[@]}"; do PACKAGE="$i" yarn command -- build; done'
+    - yarn command --scope "@webundsoehne/nx-tools" --scope "@webundsoehne/nx-builders" --include-dependencies build
   artifacts:
     paths:
       - packages/*/dist
     expire_in: 30 minutes
+  only:
+    - develop
+    - master
+  tags:
+    - node
+
+publish:
+  stage: publish
+  image: cenk1cenk2/drone-semantic-release
+  variables:
+    PLUGIN_GIT_METHOD: gl
+    PLUGIN_MODE: predict
+    PLUGIN_ADD_MODULES: semantic-release-monorepo
+    PLUGIN_OVERRIDE: npx --no-install lerna exec --scope "@webundsoehne/nx-builders" --concurrency 1 -- npx --no-install semantic-release -e semantic-release-monorepo
+  script:
+    - /semantic-release/release.sh
   only:
     - develop
     - master
