--- a/packages/nx-builders/package.json
+++ b/packages/nx-builders/package.json
@@ -14,11 +14,10 @@
   "builders": "./builders.json",
   "scripts": {
     "prebuild": "rimraf tsconfig*.tsbuildinfo && rimraf dist/",
-    "build": "tsc -p tsconfig.build.json && tscpaths -p tsconfig.paths.json -s ./dist -o ./dist",
-    "postbuild": "cpy --cwd=src --parents '**/*.json' ../dist/",
+    "build": "tsc -p tsconfig.build.json",
+    "postbuild": "tscpaths -p tsconfig.paths.json -s ./dist -o ./dist && cpy --cwd=src --parents '**/*.json' ../dist/",
     "dev:build": "yarn prebuild && tsc -p tsconfig.json && tscpaths -p tsconfig.paths.json -s ./dist -o ./dist",
-    "dev:start": "yarn dev:build && TS_NODE_PROJECT='tsconfig.paths.json' tsc-watch --noClear --onSuccess \"yarn dev:start:onSuccess\"",
-    "dev:start:onSuccess": "tscpaths -p tsconfig.paths.json -s ./dist -o ./dist && yarn postbuild",
+    "dev:start": "yarn dev:build && TS_NODE_PROJECT='tsconfig.paths.json' tsc-watch --noClear --onSuccess \"yarn postbuild\"",
     "lint": "prettier --write src/ && eslint --ext .ts,.js,.tsx,.jsx --fix src/",
     "lint:check": "eslint --ext .ts,.js,.tsx,.jsx src/"
   },
@@ -54,7 +53,7 @@
     "@angular-devkit/architect": "^0.1000.5",
     "@angular-devkit/core": "^10.0.5",
     "@angular-devkit/schematics": "~10.0.5",
-    "@nrwl/cli": "^10.0.8",
+    "@nrwl/cli": "^10.0.11",
     "execa": "^4.0.2",
     "tree-kill": "^1.2.2"
   },
