--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,7 +65,10 @@ publish:
     PLUGIN_OVERRIDE: npx --no-install lerna exec --scope "@webundsoehne/nx-builders" --concurrency 1 -- npx --no-install semantic-release -e semantic-release-monorepo
     PLUGIN_GIT_USER_EMAIL: ck@webundsoehne.com
     PLUGIN_GITLAB_TOKEN: $BANDAID_API_TOKEN
-    GIT_CLONE_PATH: /drone/src
+  before_script:
+    - apk add --no-cache --no-progress
+    - rsync -av $CI_PROJECT_DIR /drone/src
+    - cd /drone/src
   script:
     - pwd
     - ls -la
