--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ publish:
     PLUGIN_GIT_USER_EMAIL: ck@webundsoehne.com
     PLUGIN_GITLAB_TOKEN: $BANDAID_API_TOKEN
   before_script:
-    - apk add --no-cache --no-progress
+    - apk add --no-cache --no-progress rsync
     - rsync -av $CI_PROJECT_DIR /drone/src
     - cd /drone/src
   script:
