--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,8 +63,8 @@ publish:
     PLUGIN_MODE: predict
     PLUGIN_ADD_MODULES: semantic-release-monorepo
     PLUGIN_OVERRIDE: npx --no-install lerna exec --scope "@webundsoehne/nx-builders" --concurrency 1 -- npx --no-install semantic-release -e semantic-release-monorepo
-    PLUGIN_GIT_USER_EMAIL: gitlab-ci-token
-    PLUGIN_GITLAB_TOKEN: $CI_BUILD_TOKEN
+    PLUGIN_GIT_USER_EMAIL: ck@webundsoehne.com
+    PLUGIN_GITLAB_TOKEN: $BANDAID_API_TOKEN_WRITE
   before_script:
     - apk add --no-cache --no-progress rsync
     - rsync -a $CI_PROJECT_DIR/ /drone/src/
