--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "^7.5.0",
     "husky": "^4.2.5",
     "lerna": "^3.20.2",
+    "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
     "typescript": "^3.9.6"
   },
