fix: enable publish

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,14 +52,17 @@ publish:
   image: cenk1cenk2/drone-semantic-release
   variables:
     PLUGIN_GIT_METHOD: gl
-    PLUGIN_MODE: predict
+    PLUGIN_MODE: publish
     PLUGIN_ADD_MODULES: semantic-release-monorepo @semantic-release/gitlab
     PLUGIN_OVERRIDE: npx --no-install lerna exec ${PACKAGE_SCOPE} --concurrency 1 -- npx --no-install semantic-release -e semantic-release-monorepo
     PLUGIN_GIT_USER_EMAIL: $BANDAID_API_USER_EMAIL
     PLUGIN_GITLAB_TOKEN: $BANDAID_API_TOKEN_WRITE
-    NPM_USERNAME: $NPM_WS_USERNAME
-    NPM_PASSWORD: $NPM_WS_PASSWORD
-    NPM_EMAIL: $NPM_WS_EMAIL
+    PLUGIN_UPDATE_README_TOC: "true"
+    PLUGIN_README_LOCATION: "README.md $(find packages -maxdepth 2 -name README.md | paste -sd ' ')"
+    PLUGIN_NPM_USERNAME: $NPM_WS_USERNAME
+    PLUGIN_NPM_PASSWORD: $NPM_WS_PASSWORD
+    PLUGIN_NPM_EMAIL: $NPM_WS_EMAIL
+    DRONE_REPO_BRANCH: $CI_COMMIT_REF_NAME
   before_script:
     - apk add --no-cache --no-progress rsync
     - rsync -a $CI_PROJECT_DIR/ /drone/src/
