--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ publish:
     PLUGIN_GIT_USER_EMAIL: $BANDAID_API_USER_EMAIL
     PLUGIN_GITLAB_TOKEN: $BANDAID_API_TOKEN_WRITE
     PLUGIN_UPDATE_README_TOC: "true"
-    PLUGIN_README_LOCATION: "README.md $(find packages -maxdepth 2 -name README.md | paste -sd ' ')"
+    PLUGIN_README_LOCATION: "README.md $$(find packages -maxdepth 2 -name README.md | paste -sd ' ')"
     PLUGIN_NPM_USERNAME: $NPM_WS_USERNAME
     PLUGIN_NPM_PASSWORD: $NPM_WS_PASSWORD
     PLUGIN_NPM_EMAIL: $NPM_WS_EMAIL
